Updated GECO to compile with current Eclipse.